[project]
name = "qiiboard"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "papasim824", email = "papasim824@gmail.com" }
]
dependencies = [
    "Pillow",
    "janome",
    "matplotlib",
    "streamlit",
    "wordcloud",
    "msvc-runtime",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
